--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://gravatar.azure.cc/static/lib/fontawesome5pro/css/all.min.css?v=1.5.8">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/kindeditor/4.1.10/themes/default/default.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/kindeditor/4.1.10/kindeditor-all-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/kindeditor/4.1.10/lang/zh_CN.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/kindeditor@4.1.10/themes/default/default.css" />
+    <script src="https://cdn.jsdelivr.net/npm/kindeditor@4.1.10/kindeditor-all-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kindeditor@4.1.10/lang/zh-CN.js"></script>
 
     <script>
         // Tailwind CSS Dark Mode Config
