--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                 height: '400px',
                                 resizeType: 1, // Allow vertical resizing
                                 allowFileManager: false,
-                                langType: 'zh_CN',
+                                langType: 'zh-CN',
                                 items: [
                                     'source', '|', 'undo', 'redo', '|', 'preview', 'print', 'template', 'code', 'cut', 'copy', 'paste',
                                     'plainpaste', 'wordpaste', '|', 'justifyleft', 'justifycenter', 'justifyright',
