--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                     theme: 'snow',
                     modules: {
                         toolbar: [
-                            [{ 'header': [1, 2, 3, false] }],
+                            [{ 'header': [1, 2, 3, false] }, { 'size': ['small', false, 'large', 'huge'] }],
                             ['bold', 'italic', 'underline', 'strike'],
-                            [{ 'color': [] }, { 'background': [] }], // Added color pickers
+                            [{ 'color': [] }, { 'background': [] }],
                             [{ 'list': 'ordered'}, { 'list': 'bullet' }],
                             ['link', 'image', 'code-block'],
                             ['clean']
