--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script>
         const App = {
             config: {
-                workerUrl: 'https://blog.053503.xyz' // 请替换为您的 Worker URL
+                workerUrl: 'https://blog.xy193.workers.dev' // 请替换为您的 Worker URL
             },
             state: {
                 posts: [],
